# citation_downloader

./: .gitignore  README.md  pyproject.toml
citation_downloader/: cli.py  downloader.py  grobid.py  html_utils.py  pdf_utils.py  ref_parser.py  reporting.py  resolver.py  utils.py
